<resources>
    <string name="app_name">Talent Class Github API</string>
    <string name="name">Name</string>

    <string name="hafizcode02">\@%s</string>
    <string name="_100_repository">%s Repositories</string>
    <string name="followings">%s Following</string>
    <string name="follower">%s Followers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_in">Work in</string>
    <string name="location">Location</string>
    <string name="kosong">NULL</string>
    <string name="separator">Separator</string>
    <string name="count">Count</string>
    <string name="follwing">Following</string>
    <string name="follwer">Followers</string>
    <string name="repo">Repositories</string>
</resources>